<resources>
    <string name="app_name">MAP Zebra Printer</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="setting">Setting</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="template">Template</string>
    <string name="print">Print</string>
    <string name="no_connected_device">No Connected Device</string>
    <string name="input_qty">Input Qty</string>
    <string name="input_price">Input Price</string>
    <string name="powered_by_zebra">Powered by Zebra</string>
    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="last_sync">Last Download</string>
    <string name="save">Save</string>
    <string name="input_ip_address">Input IP Address</string>
    <string name="input_header">Input Header</string>
    <string name="test">Test</string>
    <string name="version">Version</string>
</resources>